--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Test</h1>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum deserunt consequatur cupiditate</h2>
+        <h1>Joe</h1>
+        <h2>Joe git test</h2>
     </header>
 </body>
 </html>
